# StudyVG

./: read me.txt
Drawing1/: settings.gradle
Drawing1/ColorPickerPreference/: build.gradle
Drawing1/ColorPickerPreference/src/main/res/layout/: dialog_color_picker.xml
Drawing1/ColorPickerPreference/src/main/res/layout-land/: dialog_color_picker.xml
Drawing1/TouchVG/: build.gradle
Drawing1/TouchVG/jni/: Android.mk  touchvg_java_wrap.cpp
Drawing1/app/: build.gradle  local.properties
Drawing1/app/src/main/: AndroidManifest.xml
Drawing1/app/src/main/res/drawable/: button_selector.xml  color_picker_selector.xml  grid_bg.xml  grid_item_border.xml  item_border.xml  item_press_bg.xml
Drawing1/app/src/main/res/layout-land/: activity_main.xml  activity_student_main.xml  (+1 more)
Drawing1/gradle/wrapper/: gradle-wrapper.properties
Win32Demo/: CMakeLists.txt  GiGdipCanvas.cpp  ViewAdapter.cpp  main.cpp
Win32Demo/include/: GiGdipCanvas.h  ViewAdapter.h
vgwin-master/: README.md  Test_vc10.sln  Test_vc12.sln  Test_vc9.sln
vgwin-master/src/TestCanvas/: TestCanvas_vc10.vcxproj  TestCanvas_vc10.vcxproj.filters  TestCanvas_vc9.vcproj  app.cpp
vgwin-master/src/TestText/: MfcGraphWnd.cpp  MfcGraphWnd.h  TestText.cpp  TestText.h  TestText.rc  TestText.vcxproj  TestText.vcxproj.filters  TestTextDlg.cpp  TestTextDlg.h  resource.h  stdafx.cpp
vgwin-master/src/TestText/res/: TestText.rc2
vgwin-master/src/TestView/: TestView_vc10.vcxproj  TestView_vc10.vcxproj.filters  TestView_vc9.vcproj  ViewAdapter.cpp  ViewAdapter.h  app.cpp
vgwin-master/src/canvas/: GiGdipCanvas.cpp
(+107 files in other folders)
